Adding button send recive images

--- a/FrontEnd_Angular_Client/clientTFTP/src/app/home/home.component.html
+++ b/FrontEnd_Angular_Client/clientTFTP/src/app/home/home.component.html
@@ -8,10 +8,22 @@
             <h4 class="card-title mt-3 text-center"></h4>
             <h2 class="text-center"> Welcome </h2>
             <hr>
-            <label for="formFileMultiple" class="form-label">Select Image</label>
-            <input class="form-control" type="file" id="formFileMultiple" multiple />
-          
         </article>
+
+        <div class="form-group row mx-auto">
+            <div class="col-md-6">
+                <button type="button"  routerLink="/send" class="btn btn-success btnOption">Send</button>
+            </div>
+            <div class="col-md-6">
+                <button type="button" routerLink="/receive" class="btn btn-info btnOption btnFontWhite">Receive</button>
+            </div>
+        </div>
+        <br>
+
     </div>
+
+    <br>
+
+
 
 </div>
