--- a/FrontEnd_Angular_Client/clientTFTP/src/app/send/send.component.html
+++ b/FrontEnd_Angular_Client/clientTFTP/src/app/send/send.component.html
@@ -8,19 +8,20 @@
             <h4 class="card-title mt-3 text-center"></h4>
             <h2 class="text-center"> Send images </h2>
             <hr>
-            <label for="formFileMultiple" class="form-label">Select Image</label>
-            <input id="imageFile" class="form-control" title="PNG,JPG" type="file" name="image" accept="image/png, .jpg"/>
-
-            <div class="col-md-8 rounded" style="background-color: #EEF6F7;">
-                    <label class="form-label font-weight-bold">Image (JPG,PNG)</label>
-                    <img id="image" class="d-block  w-100 rounded mb-2" style="max-height: 300px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);">
-            </div>
+            <form>
+                <div class="formulario__grupo col-md-12">
+                    <label class="form-label">Image (JPG,PNG,BMP)</label>
+                    <img id="image" class="d-block  w-100 rounded-top" style="max-height: 300px">
+                    <input id="imagenFile" onChange="document.getElementById('image').src = window.URL.createObjectURL(this.files[0])" type="file" title="PNG,JPG" class="form-control mt-0" name="image" accept="image/png, .jpg, .bmp">
+                </div>
+                <br/>
+                <div class="col-md-6">
+                    <button type="button"  class="btn btn-success">Send</button>
+                </div>
+            </form>
 
         </article>
-
     </div>
 
     <br>
-
-
 </div>
