--- a/FrontEnd_Angular_Client/clientTFTP/src/app/receive/receive.component.html
+++ b/FrontEnd_Angular_Client/clientTFTP/src/app/receive/receive.component.html
@@ -1,23 +1,13 @@
 <app-header></app-header>
 
+<div class="container card-body mx-auto">
 
+  <h1 class="my-4 text-center text-lg-left">Images</h1>
 
-<div class="container mt-5">
-    <div class="card bg-light">
-        <article class="card-body mx-auto" style="max-width: 400px;">
-            <h4 class="card-title mt-3 text-center"></h4>
-            <h2 class="text-center"> Images received </h2>
-            <hr>
-            <div id="imagesReceive">
-                <!-- TODO insert images received -->
-            </div>
-
-        </article>
-
+  <div class="row text-center text-lg-left">
+    <div class="col-lg-3 col-md-4 col-xs-6" *ngFor="let image of images">
+      <img class="img-fluid img-thumbnail" [src]="image" style="height: 170px; width: fit-content;">
     </div>
-
-    <br>
-
-
+  </div>
 
 </div>
