--- a/FrontEnd_Angular_Client/clientTFTP/src/app/receive/receive.component.html
+++ b/FrontEnd_Angular_Client/clientTFTP/src/app/receive/receive.component.html
@@ -5,7 +5,7 @@
   <h1 class="my-4 text-center text-lg-left">Images</h1>
 
   <div class="row text-center text-lg-left">
-    <div class="col-lg-3 col-md-4 col-xs-6" *ngFor="let image of images">
+    <div class="col-lg-3 col-md-4 col-xs-6 m-3 pb-3" *ngFor="let image of images">
       <img class="img-fluid img-thumbnail" [src]="image" style="height: 170px; width: fit-content;">
     </div>
   </div>
